--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.7.5"
   }
 }
